tests/snapshots/examples_fixtures/type_system__failing__15_effect_missing_from_caller.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/15_effect_missing_from_caller.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `log_line` requires effect `Console` in this function signature.

  examples/type_system/failing/15_effect_missing_from_caller.flx:28:5
   |
28 |     log_line("value=#{to_string(x)}")
   |     ^^^^^^^^
   |     -------- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
